Commit GénérerUrl + AffichageQuiz

--- a/Projet_POO_API/Pages/Home.razor
+++ b/Projet_POO_API/Pages/Home.razor
@@ -1,7 +1,42 @@
 ﻿@page "/"
+@using Projet_POO_API.Services
+@inject TriviaAPIService TriviaAPIService
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h3>Quizz OpenTDB</h3>
 
-Welcome to your new app.
+@if (questions == null)
+{
+    <p>Chargement...</p>
+}
+else
+{
+    @foreach (var question in questions)
+    {
+        <div class="card">
+            <h5>@question.DecodedText</h5>
+            <ul>
+                @foreach (var answer in GetShuffledAnswers(question))
+                {
+                    <li>@answer</li>
+                }
+            </ul>
+        </div>
+    }
+}
+
+@code {
+    private List<Question> questions;
+
+    protected override async Task OnInitializedAsync()
+    {
+        questions = await TriviaAPIService.GetQuizAsync();
+    }
+
+    private List<string> GetShuffledAnswers(Question question)
+    {
+        var answers = new List<string>(question.DecodedIncorrectAnswers) { question.DecodedCorrectAnswer };
+        return answers.OrderBy(a => Guid.NewGuid()).ToList();
+    }
+}
