Gestion Quizz OK + Début Favoris

--- a/Projet_POO_API/Pages/QuizSetup.razor
+++ b/Projet_POO_API/Pages/QuizSetup.razor
@@ -60,7 +60,7 @@ else
     private void StartQuiz()
     {
         TriviaAPIService.GenererUrl(SelectionCategorie, SelectionDifficulte, SelectionType);
-        Navigation.NavigateTo("/");
+        Navigation.NavigateTo("/quizz");
 
     }
 }
