--- a/Projet_POO_API/Layout/MainLayout.razor.css
+++ b/Projet_POO_API/Layout/MainLayout.razor.css
@@ -4,16 +4,20 @@
     flex-direction: column;
 }
 
+body{
+    background-color: #93b3a8;
+}
+
 main {
     flex: 1;
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-color: #3e6558;
 }
 
 .top-row {
-    background-color: #f7f7f7;
+    background-color: #3e6558;
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
