--- a/Projet_POO_API/Pages/Home.razor
+++ b/Projet_POO_API/Pages/Home.razor
@@ -2,4 +2,4 @@
 
 <PageTitle> GeneratorQuizz </PageTitle>
 
-<h3>Bienvenue dans le GeneratorQuizz !</h3>
+<h1 style="text-align: center; margin-top: 20px;"> Bienvenue dans le GeneratorQuiz</h1>
