--- a/Projet_POO_API/wwwroot/css/app.css
+++ b/Projet_POO_API/wwwroot/css/app.css
@@ -2,6 +2,10 @@ html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
+.selection {
+    padding:5px;
+}
+
 h1:focus {
     outline: none;
 }
