--- a/Projet_POO_API/Pages/MesFavoris.razor
+++ b/Projet_POO_API/Pages/MesFavoris.razor
@@ -40,7 +40,8 @@ else
     <p>Vous n'avez pas encore de favoris.</p>
 }
 @code {
-    private List<FavorisService.FavorisQuizz> favoris;
+    private List<FavorisService.FavorisQuizz> favoris; // variable pour stocker la liste des favoris récupérée depuis le service
+
 
     protected override async Task OnInitializedAsync()
     {
